# giggle

./: .gitignore  Makefile.am  configure.ac  giggle.doap
data/: .gitignore  Makefile.am  giggle.schemas.in  main-window.ui
help/: Makefile.am
help/C/: browse-view.page  history-view.page  index.page  introduction.page  legal.xml  opening-repositories.page  tagging-commits.page
help/de/: de.po
help/es/: es.po
libgiggle-git/: Makefile.am  giggle-git-clone.c  giggle-git.c
m4/: .gitignore
po/: POTFILES.in  cs.po  de.po  es.po  fr.po  sl.po
src/: Makefile.am  giggle-clone-dialog.c  giggle-clone-dialog.h  giggle-file-list.c  giggle-helpers.c  giggle-helpers.h  giggle-main.c  giggle-rev-list-view.c  giggle-revision-view.c  giggle-view-summary.c  giggle-window.c
