include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = giggle
DOC_INCLUDES =

DOC_PAGES = \
	browse-view.page \
	history-view.page \
	index.page \
	introduction.page \
	license.page \
	opening-repositories.page \
	tagging-commits.page

DOC_FIGURES = \
	figures/giggle-browse_view_sections.png \
	figures/giggle-history_view_sections.png

DOC_LINGUAS = de es pl
dist-hook: doc-dist-hook
